<package format="3">
  <name>my_cpp_py_pkg</name>
  <version>0.0.0</version>
  <author>Vincent Rabaud</author>
  <description>TODO: Package description</description>
  <maintainer email="z0123@todo.todo">z0123</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 

  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/resized_plugins.xml"/>
  </export>
</package>
